# python-project-lvl1

./: README.md  pyproject.toml
brain_games/: cli.py  engine.py  even.py
brain_games/games/: calc.py  cli.py  ending.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py
